# gridlock-round2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  APPROACH.docx  APPROACH.md  CONTEXT.md  LICENSE  README.md  db_integration_guide.md  docker-compose.yml  pyproject.toml  requirements.txt  todo.md
.github/workflows/: ci.yml
backend/: .env.example
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: db_models.py  schemas.py
backend/app/services/: data_store.py  simulation.py
backend/scripts/: init_db.py  seed_db.py
datasets/: README.md
deployment/: Dockerfile.backend  Dockerfile.frontend  render.yaml  supabase_schema.sql
docs/: API.md  ARCHITECTURE.md  DATA_DICTIONARY.md  DEPLOYMENT.md  HACKATHON_PITCH.md  MODEL_CARD.md  USER_GUIDE.md
frontend/: .env.local.example  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/hooks/: useApi.ts
ml/parking_intel/: __init__.py  config.py  data.py  debias.py  eps.py  forecast.py  geojson_utils.py  h3_index.py  hotspots.py  osm.py  pcii.py  pipeline.py  simulate.py  speed_validation.py
outputs/: data_profile.json  forecast_results.parquet  hotspots.geojson  metrics.json  priority_zones.geojson  priority_zones.parquet  simulation.json
tests/: conftest.py  test_api.py  test_debias.py  test_displacement.py  test_forecast_pipeline.py  test_ml_core.py  test_pipeline_main.py  test_speed_validation.py
(+16 files in other folders)
