[project]
name = "parking-intel"
version = "0.1.0"
description = "AI-Powered Parking Intelligence Platform — hotspots, congestion impact, forecasting, enforcement prioritization"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["ml"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["frontend", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --cov=ml/parking_intel --cov=backend/app --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["ml", "backend"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
